2000-06-08  Fernando Nasser  <fnasser@cygnus.com>

	* config/i386/tm-embed.h: New file.  Specific for embedded targets
	like i386-elf, i386-coff and i386-aout.
	* config/i386/embed.mt (): Specify tm-embed.h instead of the System V
	header file.

2000-06-08  Fernando Nasser  <fnasser@cygnus.com>

	* MAINTAINERS: Add myself to gdbtk list.

2000-06-08  Kevin Buettner  <kevinb@redhat.com>

	* config/ia64/nm-linux.h (U_REGS_OFFSET): Define.

2000-06-08  Fernando Nasser  <fnasser@cygnus.com>

	* configure.in: Replace misplaced CONFIG_ADD by the correct
	CONFIG_CLEAN.
	* configure, config.in: Regenerate.

2000-06-08  Fernando Nasser  <fnasser@cygnus.com>

	* values.c (value_primitive_field): Copy VALUE_REGNO as well.
	With typed registers we may have the location information in this field,
	in addition to VALUE_ADDRESS (which was already being copied).

Thu Jun  8 15:26:44 2000  Andrew Cagney  <cagney@b1.cygnus.com>

	* config/mips/tm-mips.h (GDB_MULTI_ARCH): Define as 1.
	(CALL_DUMMY, TARGET_BYTE_ORDER_SELECTABLE_P,
 	COERCE_FLOAT_TO_DOUBLE): Delete.
	* config/mips/tm-vr5000el.h, config/mips/tm-vr5000.h,
 	config/mips/tm-vr4xxxel.h, config/mips/tm-vr4xxx.h,
 	config/mips/tm-vr4100.h, config/mips/tm-tx39l.h
 	config/mips/tm-tx39.h, config/mips/tm-irix5.h: Delete
 	GDB_MULTI_ARCH.

	* config/mips/tm-mips64.h (TARGET_LONG_BIT, TARGET_LONG_LONG_BIT,
 	TARGET_PTR_BIT): Delete definitions.
	* config/mips/tm-vr5000el.h, config/mips/tm-vr5000.h,
 	config/mips/tm-tx39l.h, config/mips/tm-vr4100.h,
 	config/mips/tm-tx39.h: Delete definition of MIPS_EABI.
	* mips-tdep.c (mips_gdbarch_init): Use the ISA to determine the
 	ABI.  If all else fails, assume O32.

	* TODO, NEWS: Update.  Mention MIPS is multi-arch.

Thu Jun  8 14:23:12 2000  Andrew Cagney  <cagney@b1.cygnus.com>

	* config/mips/tm-vr4xxxel.h, config/mips/tm-vr4xxx.h,
 	config/mips/tm-vr4100.h, config/mips/tm-tx39l.h,
 	config/mips/tm-tx39.h: Delete definition of
 	MIPS_DEFAULT_FPU_TYPE. Enable multi-arch.